--- a/Kiron.LojaVirtual.Web/Web.config
+++ b/Kiron.LojaVirtual.Web/Web.config
@@ -14,6 +14,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--o Nome de conexão tem que o mesmo da classe de repositório EfDbContext-->
+  <connectionStrings>
+    <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=C:\Projetos\Kiron.LojaVirtual\Kiron.LojaVirtual.Web\App_Data\Kiron.LojaVirtual.Dominio.Repositorio.EfDbContext.mdf;Integrated Security=True" providerName="System.Data.SqlClient"></add>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
