--- a/Kiron.LojaVirtual.Web/Kiron.LojaVirtual.Web.csproj
+++ b/Kiron.LojaVirtual.Web/Kiron.LojaVirtual.Web.csproj
@@ -125,6 +125,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Produtos\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Vitrine\ListaProdutos.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -135,7 +136,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Produto\" />
-    <Folder Include="Views\Vitrine\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kiron.LojaVirtual.Dominio\Kiron.LojaVirtual.Dominio.csproj">
